--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Hi there! Welcome to my personal website!</h1>
   <script src="script.js"></script>
-  <img src="Foto1.jpg" alt="This is a photo of me!" id="my-photo" onclick="sayHello()">
+  <img src="Foto1.JPG" alt="This is a photo of me!" id="my-photo" onclick="sayHello()">
 </body>
 </html>
 
