--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Hi there! Welcome to my personal website!</h1>
   <script src="script.js"></script>
-  <img src="/Foto2.jpg" alt="This is a photo of me!" id="my-photo" onclick="sayHello()">
+  <img src="Foto2.jpg" alt="This is a photo of me!" id="my-photo" onclick="sayHello()">
 </body>
 </html>
